2008-02-03  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/memory.c (MagickAcquireMemoryArray): Use implementation
	from the 1.1 branch.
	* magick/utility.h: Remove MagickSafeMultiplySize_t since it seems
	that use of inline functions in Windows is a disaster area.

2008-02-02  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* Makefile.am (windows-dist): Create a 7z compressed Windows
	comprehensive source package.  See http://www.7-zip.org/ for
	information on Windows 7-Zip and http://p7zip.sourceforge.net/ for
	information on portable 7-Zip (P7ZIP).

2008-02-01  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/tiff.c (WriteTIFFImage): Add logging for image resolution
	and resolution units.
	* magick/version.h.in: Update copyright year to 2008.

2008-02-01  Gary V. Vaughan  <gary@gnu.org>
	
	* configure.ac: Updated for libtool-2.1b.
	* bootstrap (libtoolize): Libtoolize can figure out the mode and
	directory for libltdl from configure.ac.

2008-01-28  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	* magick/Makefile.am: Update
	magick_libGraphicsMagick_la_DEPENDENCIES to use LTDLDEPS.

2008-01-26  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/image.c (SetImageInfo): Successfully read existing file
	names in the form file[123] which were failing to read since they
	appear to be a valid sub-image specification.

2008-01-24  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/utility.c (ExpandFilenames): If a filename appears to
	contain a wildcard specification, first check to see if there is
	file matching the unexpanded wildcard prior to engaging in the
	slow task of wildcard expansion.  Without this fix, expanding the
	command line takes a very long time if there are a huge number of
	files in the directory, and some file names appear to contain
	wildcard specifications.  Inspired by SourceForge bug reports [
	1878992 ] "literal square brackets in file name cause large delay"