@@ -1,5 +1,9 @@
 2008-02-03  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
+	* PerlMagick/Magick.xs: Eliminate use of memory allocation macros
+	since these failed miserably under Windows where it seems that
+	malloc, free, and realloc are redefined via macros by the Perl
+	build environment.  This reverts changes made on 2007-12-01.
 	* magick/memory.c (MagickAcquireMemoryArray): Use implementation
 	from the 1.1 branch.
 	* magick/utility.h: Remove MagickSafeMultiplySize_t since it seems
